# cmd/api/docs/swagger.yaml
@@ -43,6 +43,13 @@ definitions:
       category:
         type: string
     type: object
+  models.Login:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
   response.Response:
     properties:
       data: {}
@@ -155,14 +162,38 @@ paths:
     post:
       consumes:
       - application/json
-      description: This is the Login handler for procast admins
+      description: This is the Login handler for providers
       parameters:
-      - description: Admin login details
-        in: body
-        name: admin
+      - description: name
+        in: formData
+        name: name
         required: true
-        schema:
-          $ref: '#/definitions/models.AdminLogin'
+        type: string
+      - description: email
+        in: formData
+        name: email
+        required: true
+        type: string
+      - description: password
+        in: formData
+        name: password
+        required: true
+        type: string
+      - description: re-password
+        in: formData
+        name: re-password
+        required: true
+        type: string
+      - description: phone
+        in: formData
+        name: phone
+        required: true
+        type: string
+      - description: document
+        in: formData
+        name: document
+        required: true
+        type: file
       produces:
       - application/json
       responses:
@@ -174,9 +205,9 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.Response'
-      summary: Admin Login
+      summary: Register
       tags:
-      - Admin
+      - Provider
   /admin/panel:
     delete:
       consumes:
@@ -791,4 +822,60 @@ paths:
       summary: Get Completed Works
       tags:
       - Admin
+  /provider/login:
+    post:
+      consumes:
+      - application/json
+      description: Login handler for jerseyhub providers
+      parameters:
+      - description: Login Details
+        in: body
+        name: admin
+        required: true
+        schema:
+          $ref: '#/definitions/models.Login'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Provider Login
+      tags:
+      - Provider
+  /provider/profile/service:
+    post:
+      consumes:
+      - application/json
+      description: providers can add a service to their providable services
+      parameters:
+      - description: user-id
+        in: query
+        name: user_id
+        required: true
+        type: string
+      - description: service-id
+        in: query
+        name: service_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Add Service
+      tags:
+      - Provider
 swagger: "2.0"
